<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.shosha.shosha.Inicio"
    tools:showIn="@layout/app_bar_inicio">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/bt_nuevaLista"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@android:color/background_light"
            android:drawableTop="@mipmap/nueva_lista"
            android:text="@string/nueva_lista"></Button>

        <Button
            android:id="@+id/bt_listasActivas"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@android:color/background_light"
            android:drawableTop="@mipmap/nueva_lista"
            android:onClick="mostrarListasActivas"
            android:text="@string/listas" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/bt_unirseLista"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@android:color/background_light"
            android:drawableTop="@mipmap/nueva_lista"
            android:text="@string/unirse" />

        <Button
            android:id="@+id/bt_buscarReceta"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@android:color/background_light"
            android:drawableTop="@mipmap/nueva_lista"
            android:text="@string/buscar_receta" />
    </TableRow>
</TableLayout>
